--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
-## $Id$
+## $Id: Makefile.am,v 1.1 2003/05/13 11:36:21 ahsu Exp $
 
 SUBDIRS = src doc
 AUTOMAKE_OPTIONS = dist-bzip2
-EXTRA_DIST = depcomp
+EXTRA_DIST = depcomp mutt_vc_query.spec
